--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
   <head>
+    <title>Senior Enrichment</title>
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <div id="main"></div>
