--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,14 @@
 <!doctype html>
 <html>
-  <head>
-    <title>Senior Enrichment</title>
-    <link rel="stylesheet" href="/style.css" />
-  </head>
-  <body>
-    <div id="main"></div>
-    <script async defer src="/bundle.js"></script>    
-  </body>
-</html> 
+
+<head>
+  <title>Senior Enrichment</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.min.css" />
+</head>
+
+<body>
+  <div id="main"></div>
+  <script async defer src="/bundle.js"></script>
+</body>
+
+</html>
